# spglisoft_rpc_server

./: Cargo.toml  build.rs
proto/: spglisoft.proto
src/: data_access.rs  server.rs
src/dal/: data_access.rs  mod.rs  project.rs  user.rs
