[package]
name = "spglisoft_rpc_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spglisoft-server"
path = "src/server.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
mysql = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.10"